/**
 * JuiceTokens Protocol - Future Value and Promise Protocol Adapter
 * 
 * This adapter provides functionality for:
 * - Creating, validating, and tracking promises representing future value
 * - Managing escrow conditions for token locking
 * - Handling communal pooling of tokens
 */

import { IResult, IValidationError, ValidationErrorCode } from './types';
import * as crypto from 'crypto';

// Interfaces based on future.proto definitions
export enum RequirementType {
  ATTESTATION = 0,
  EVIDENCE = 1,
  TIMELOCK = 2,
  CONDITIONAL = 3
}

export enum FulfillmentState {
  NOT_STARTED = 0,
  IN_PROGRESS = 1,
  PARTIALLY_FULFILLED = 2,
  FULFILLED = 3,
  DISPUTED = 4,
  CANCELED = 5
}

export enum ConditionType {
  TIME_BASED = 0,
  EVENT_BASED = 1,
  MULTI_SIG = 2,
  ORACLE_BASED = 3
}

export enum EscrowStatus {
  ACTIVE = 0,
  FULFILLED = 1,
  REFUNDED = 2,
  DISPUTED = 3,
  EXPIRED = 4
}

export enum RiskStrategy {
  EQUAL = 0,
  PROPORTIONAL = 1,
  CUSTOM = 2
}

export enum FulfillmentStatus {
  PENDING = 0,
  VERIFIED = 1,
  REJECTED = 2,
  DISPUTED = 3
}

export interface IVerificationRequirement {
  requirementId: string;
  description: string;
  requirementType: RequirementType;
  requirementParameters: Uint8Array;
  optional: boolean;
  weight: number;
}

export interface IPromiseCreation {
  promiseId: string;
  creatorId: string;
  beneficiaryId: string;
  promiseDescription: string;
  valueAmount: number;
  dueDateMs: number;
  verificationRequirements: IVerificationRequirement[];
  creatorSignature: Uint8Array;
}

export interface IRequirementStatus {
  requirementId: string;
  completionPercentage: number;
  statusDescription: string;
  evidenceReferences: string[];
  lastUpdateMs: number;
}

export interface IFulfillmentTracking {
  promiseId: string;
  requirementStatuses: IRequirementStatus[];
  overallCompletionPercentage: number;
  lastUpdateMs: number;
  state: FulfillmentState;
}

export interface IPromiseMetadata {
  promiseId: string;
  category: string;
  context: string;
  tags: string[];
  public: boolean;
  customAttributes: Record<string, string>;
}

export interface IEscrowCondition {
  conditionId: string;
  description: string;
  conditionType: ConditionType;
  conditionParameters: Uint8Array;
  negated: boolean;
}

export interface IMultiSignatureRequirement {
  requirementId: string;
  requiredSigners: string[];
  threshold: number;
  timeoutHours: number;
  allowDelegation: boolean;
}

export interface ITimeBasedTrigger {
  triggerId: string;
  triggerTimeMs: number;
  releaseOnTrigger: boolean;
  recurring: boolean;
  recurrenceIntervalHours: number;
  maxRecurrences: number;
}

export interface IEscrowStatusData {
  escrowId: string;
  escrowedTokens: string[];
  depositorId: string;
  recipientId: string;
  conditions: IEscrowCondition[];
  status: EscrowStatus;
  creationMs: number;
  lastUpdateMs: number;
}

export interface IGroupCommitment {
  commitmentId: string;
  groupId: string;
  commitmentPurpose: string;
  participantIds: string[];
  contributions: Record<string, number>;
  totalValue: number;
  creationMs: number;
  fulfillmentDeadlineMs: number;
}

export interface IRiskDistribution {
  distributionId: string;
  parentCommitmentId: string;
  riskWeights: Record<string, number>;
  strategy: RiskStrategy;
  distributionRules: Uint8Array;
}

export interface IVerificationVote {
  verifierId: string;
  approved: boolean;
  comment: string;
  voteTimestampMs: number;
  signature: Uint8Array;
}

export interface ICollectiveFulfillment {
  fulfillmentId: string;
  parentCommitmentId: string;
  verifierIds: string[];
  verificationThreshold: number;
  votes: IVerificationVote[];
  status: FulfillmentStatus;
  lastUpdateMs: number;
}

export interface IPoolMetadata {
  poolId: string;
  name: string;
  description: string;
  category: string;
  tags: string[];
  public: boolean;
  customAttributes: Record<string, string>;
}

/**
 * Adapter for managing promises representing future value
 */
export class FutureValueAdapter {
  /**
   * Creates a new promise representing future value
   * 
   * @param params Promise creation parameters
   * @returns Result containing the created promise
   */
  public async createPromise(
    params: Omit<IPromiseCreation, 'promiseId' | 'creatorSignature'>
  ): Promise<IResult<IPromiseCreation>> {
    try {
      // Generate a unique promise ID
      const promiseId = crypto.randomUUID();

      // Create the promise
      const promise: IPromiseCreation = {
        ...params,
        promiseId,
        creatorSignature: new Uint8Array() // This would be populated with a real signature
      };

      // Validate the promise
      const validationResult = this.validatePromise(promise);
      if (!validationResult.success) {
        return {
          success: false,
          errors: validationResult.errors
        };
      }

      // In a real implementation, this would store the promise in a database
      return {
        success: true,
        data: promise
      };
    } catch (error) {
      return {
        success: false,
        errors: [{
          field: 'general',
          message: `Failed to create promise: ${error instanceof Error ? error.message : String(error)}`,
          code: ValidationErrorCode.INVALID_STATE
        }]
      };
    }
  }

  /**
   * Validates a promise creation request
   * 
   * @param promise Promise to validate
   * @returns Validation result
   */
  public validatePromise(promise: IPromiseCreation): IResult<boolean> {
    try {
      // Check required fields
      if (!promise.creatorId) {
        return {
          success: false,
          errors: [{
            field: 'creatorId',
            message: 'Creator ID is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      if (!promise.beneficiaryId) {
        return {
          success: false,
          errors: [{
            field: 'beneficiaryId',
            message: 'Beneficiary ID is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      if (!promise.promiseDescription) {
        return {
          success: false,
          errors: [{
            field: 'promiseDescription',
            message: 'Promise description is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      if (promise.valueAmount <= 0) {
        return {
          success: false,
          errors: [{
            field: 'valueAmount',
            message: 'Value amount must be positive',
            code: ValidationErrorCode.INVALID_VALUE
          }]
        };
      }
      
      // Validate due date is in the future
      const now = Date.now();
      if (promise.dueDateMs <= now) {
        return {
          success: false,
          errors: [{
            field: 'dueDateMs',
            message: 'Due date must be in the future',
            code: ValidationErrorCode.INVALID_VALUE
          }]
        };
      }
      
      // Validate verification requirements
      if (!promise.verificationRequirements || promise.verificationRequirements.length === 0) {
        return {
          success: false,
          errors: [{
            field: 'verificationRequirements',
            message: 'At least one verification requirement is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      // Check that all requirements have unique IDs
      const requirementIds = new Set<string>();
      for (const req of promise.verificationRequirements) {
        if (requirementIds.has(req.requirementId)) {
          return {
            success: false,
            errors: [{
              field: 'verificationRequirements',
              message: `Duplicate requirement ID: ${req.requirementId}`,
              code: ValidationErrorCode.INVALID_VALUE
            }]
          };
        }
        requirementIds.add(req.requirementId);
        
        // Validate requirement fields
        if (!req.description) {
          return {
            success: false,
            errors: [{
              field: 'verificationRequirements',
              message: 'Requirement description is required',
              code: ValidationErrorCode.MISSING_REQUIRED
            }]
          };
        }
        
        if (req.weight <= 0) {
          return {
            success: false,
            errors: [{
              field: 'verificationRequirements',
              message: 'Requirement weight must be positive',
              code: ValidationErrorCode.INVALID_VALUE
            }]
          };
        }
      }
      
      // In a real implementation, we would also verify the creator's signature
      
      return { success: true, data: true };
    } catch (error) {
      return {
        success: false,
        errors: [{
          field: 'general',
          message: `Promise validation failed: ${error instanceof Error ? error.message : String(error)}`,
          code: ValidationErrorCode.INVALID_STATE
        }]
      };
    }
  }

  /**
   * Updates the fulfillment status of a promise
   * 
   * @param promiseId ID of the promise to update
   * @param requirementId ID of the requirement to update
   * @param completionPercentage New completion percentage
   * @param statusDescription Description of the current status
   * @param evidenceReferences References to evidence supporting the update
   * @returns Updated fulfillment tracking data
   */
  public async updateFulfillment(
    promiseId: string,
    requirementId: string,
    completionPercentage: number,
    statusDescription: string,
    evidenceReferences: string[] = []
  ): Promise<IResult<IFulfillmentTracking>> {
    try {
      // In a real implementation, we would retrieve the existing fulfillment tracking
      // from storage and update it
      
      // For demonstration purposes, we'll create a mock fulfillment tracking
      const fulfillment: IFulfillmentTracking = {
        promiseId,
        requirementStatuses: [
          {
            requirementId,
            completionPercentage,
            statusDescription,
            evidenceReferences,
            lastUpdateMs: Date.now()
          }
        ],
        overallCompletionPercentage: completionPercentage,
        lastUpdateMs: Date.now(),
        state: completionPercentage >= 100 ? FulfillmentState.FULFILLED : FulfillmentState.IN_PROGRESS
      };
      
      return {
        success: true,
        data: fulfillment
      };
    } catch (error) {
      return {
        success: false,
        errors: [{
          field: 'general',
          message: `Failed to update fulfillment: ${error instanceof Error ? error.message : String(error)}`,
          code: ValidationErrorCode.INVALID_STATE
        }]
      };
    }
  }

  /**
   * Calculates the overall completion percentage based on requirement statuses
   * 
   * @param requirements Requirements with their weights
   * @param statuses Current status of each requirement
   * @returns Overall completion percentage
   */
  public calculateOverallCompletion(
    requirements: IVerificationRequirement[],
    statuses: IRequirementStatus[]
  ): number {
    // Map statuses by requirement ID for easy lookup
    const statusMap = new Map<string, IRequirementStatus>();
    for (const status of statuses) {
      statusMap.set(status.requirementId, status);
    }
    
    let totalWeight = 0;
    let weightedCompletion = 0;
    
    for (const req of requirements) {
      // Skip optional requirements if they don't have a status yet
      if (req.optional && !statusMap.has(req.requirementId)) {
        continue;
      }
      
      totalWeight += req.weight;
      
      const status = statusMap.get(req.requirementId);
      if (status) {
        weightedCompletion += status.completionPercentage * req.weight / 100;
      }
    }
    
    if (totalWeight === 0) {
      return 0;
    }
    
    return (weightedCompletion / totalWeight) * 100;
  }

  /**
   * Handles a broken promise, triggering recovery mechanisms
   * 
   * @param promiseId ID of the broken promise
   * @param reason Reason for classifying the promise as broken
   * @returns Result of the recovery operation
   */
  public async handleBrokenPromise(
    promiseId: string,
    reason: string
  ): Promise<IResult<boolean>> {
    try {
      // In a real implementation, this would:
      // 1. Update the promise status to DISPUTED or CANCELED
      // 2. Notify interested parties
      // 3. Trigger recovery mechanisms (e.g., releasing escrowed tokens)
      // 4. Update reputation metrics
      
      // For demonstration purposes, we'll just return success
      return {
        success: true,
        data: true
      };
    } catch (error) {
      return {
        success: false,
        errors: [{
          field: 'general',
          message: `Failed to handle broken promise: ${error instanceof Error ? error.message : String(error)}`,
          code: ValidationErrorCode.INVALID_STATE
        }]
      };
    }
  }
}

/**
 * Adapter for managing escrow mechanisms for future value
 */
export class EscrowAdapter {
  /**
   * Creates a new escrow for tokens
   * 
   * @param depositorId ID of the user depositing tokens
   * @param recipientId ID of the intended recipient
   * @param tokenIds IDs of tokens to escrow
   * @param conditions Conditions for releasing the tokens
   * @returns Escrow status data
   */
  public async createEscrow(
    depositorId: string,
    recipientId: string,
    tokenIds: string[],
    conditions: IEscrowCondition[]
  ): Promise<IResult<IEscrowStatusData>> {
    try {
      // Generate a unique escrow ID
      const escrowId = crypto.randomUUID();
      
      // Validate inputs
      if (!depositorId) {
        return {
          success: false,
          errors: [{
            field: 'depositorId',
            message: 'Depositor ID is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      if (!recipientId) {
        return {
          success: false,
          errors: [{
            field: 'recipientId',
            message: 'Recipient ID is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      if (!tokenIds || tokenIds.length === 0) {
        return {
          success: false,
          errors: [{
            field: 'tokenIds',
            message: 'At least one token must be escrowed',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      if (!conditions || conditions.length === 0) {
        return {
          success: false,
          errors: [{
            field: 'conditions',
            message: 'At least one release condition is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      // Create the escrow status
      const now = Date.now();
      const escrowStatus: IEscrowStatusData = {
        escrowId,
        escrowedTokens: tokenIds,
        depositorId,
        recipientId,
        conditions,
        status: EscrowStatus.ACTIVE,
        creationMs: now,
        lastUpdateMs: now
      };
      
      // In a real implementation, we would:
      // 1. Lock the tokens so they can't be spent
      // 2. Store the escrow status in a database
      // 3. Set up triggers for time-based conditions
      
      return {
        success: true,
        data: escrowStatus
      };
    } catch (error) {
      return {
        success: false,
        errors: [{
          field: 'general',
          message: `Failed to create escrow: ${error instanceof Error ? error.message : String(error)}`,
          code: ValidationErrorCode.INVALID_STATE
        }]
      };
    }
  }

  /**
   * Checks if an escrow's conditions have been met
   * 
   * @param escrowId ID of the escrow to check
   * @returns Whether all conditions are met
   */
  public async checkEscrowConditions(escrowId: string): Promise<IResult<boolean>> {
    try {
      // In a real implementation, we would:
      // 1. Retrieve the escrow data from storage
      // 2. Check each condition:
      //    - For time-based conditions, compare against current time
      //    - For event-based conditions, check if the event occurred
      //    - For multi-sig conditions, check if enough signatures are present
      //    - For oracle-based conditions, query the oracle
      // 3. Consider the negated flag for each condition
      
      // For demonstration purposes, we'll just return success
      return {
        success: true,
        data: true
      };
    } catch (error) {
      return {
        success: false,
        errors: [{
          field: 'general',
          message: `Failed to check escrow conditions: ${error instanceof Error ? error.message : String(error)}`,
          code: ValidationErrorCode.INVALID_STATE
        }]
      };
    }
  }

  /**
   * Releases escrowed tokens to the recipient
   * 
   * @param escrowId ID of the escrow to release
   * @returns Success indicator
   */
  public async releaseEscrow(escrowId: string): Promise<IResult<boolean>> {
    try {
      // Check if conditions are met
      const conditionsResult = await this.checkEscrowConditions(escrowId);
      if (!conditionsResult.success) {
        return conditionsResult;
      }
      
      if (!conditionsResult.data) {
        return {
          success: false,
          errors: [{
            field: 'escrowId',
            message: 'Escrow conditions not met',
            code: ValidationErrorCode.INVALID_STATE
          }]
        };
      }
      
      // In a real implementation, we would:
      // 1. Update the escrow status to FULFILLED
      // 2. Transfer the tokens to the recipient
      // 3. Update the last updated timestamp
      
      // For demonstration purposes, we'll just return success
      return {
        success: true,
        data: true
      };
    } catch (error) {
      return {
        success: false,
        errors: [{
          field: 'general',
          message: `Failed to release escrow: ${error instanceof Error ? error.message : String(error)}`,
          code: ValidationErrorCode.INVALID_STATE
        }]
      };
    }
  }

  /**
   * Refunds escrowed tokens to the depositor
   * 
   * @param escrowId ID of the escrow to refund
   * @param reason Reason for the refund
   * @returns Success indicator
   */
  public async refundEscrow(
    escrowId: string,
    reason: string
  ): Promise<IResult<boolean>> {
    try {
      // In a real implementation, we would:
      // 1. Update the escrow status to REFUNDED
      // 2. Transfer the tokens back to the depositor
      // 3. Update the last updated timestamp
      // 4. Log the reason for the refund
      
      // For demonstration purposes, we'll just return success
      return {
        success: true,
        data: true
      };
    } catch (error) {
      return {
        success: false,
        errors: [{
          field: 'general',
          message: `Failed to refund escrow: ${error instanceof Error ? error.message : String(error)}`,
          code: ValidationErrorCode.INVALID_STATE
        }]
      };
    }
  }
}

/**
 * Adapter for managing communal pooling of tokens
 */
export class CommunalPoolAdapter {
  /**
   * Creates a new group commitment for a communal pool
   * 
   * @param groupId ID of the group creating the commitment
   * @param purpose Purpose of the commitment
   * @param participants IDs of participants
   * @param contributions Contribution amounts by participant ID
   * @param fulfillmentDeadlineMs Deadline for fulfilling the commitment
   * @returns Group commitment data
   */
  public async createGroupCommitment(
    groupId: string,
    purpose: string,
    participants: string[],
    contributions: Record<string, number>,
    fulfillmentDeadlineMs: number
  ): Promise<IResult<IGroupCommitment>> {
    try {
      // Generate a unique commitment ID
      const commitmentId = crypto.randomUUID();
      
      // Validate inputs
      if (!groupId) {
        return {
          success: false,
          errors: [{
            field: 'groupId',
            message: 'Group ID is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      if (!purpose) {
        return {
          success: false,
          errors: [{
            field: 'purpose',
            message: 'Commitment purpose is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      if (!participants || participants.length === 0) {
        return {
          success: false,
          errors: [{
            field: 'participants',
            message: 'At least one participant is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      if (!contributions || Object.keys(contributions).length === 0) {
        return {
          success: false,
          errors: [{
            field: 'contributions',
            message: 'At least one contribution is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      // Validate all participants have contributions
      for (const participant of participants) {
        if (!contributions[participant]) {
          return {
            success: false,
            errors: [{
              field: 'contributions',
              message: `Participant ${participant} has no contribution`,
              code: ValidationErrorCode.INVALID_VALUE
            }]
          };
        }
      }
      
      // Calculate total value
      const totalValue = Object.values(contributions).reduce((sum, value) => sum + value, 0);
      
      // Create the group commitment
      const now = Date.now();
      const commitment: IGroupCommitment = {
        commitmentId,
        groupId,
        commitmentPurpose: purpose,
        participantIds: participants,
        contributions,
        totalValue,
        creationMs: now,
        fulfillmentDeadlineMs
      };
      
      // In a real implementation, we would store the commitment in a database
      
      return {
        success: true,
        data: commitment
      };
    } catch (error) {
      return {
        success: false,
        errors: [{
          field: 'general',
          message: `Failed to create group commitment: ${error instanceof Error ? error.message : String(error)}`,
          code: ValidationErrorCode.INVALID_STATE
        }]
      };
    }
  }

  /**
   * Creates a risk distribution strategy for a group commitment
   * 
   * @param commitmentId ID of the parent commitment
   * @param strategy Risk distribution strategy
   * @param customWeights Custom risk weights by participant ID (required for CUSTOM strategy)
   * @returns Risk distribution data
   */
  public async createRiskDistribution(
    commitmentId: string,
    strategy: RiskStrategy,
    customWeights?: Record<string, number>
  ): Promise<IResult<IRiskDistribution>> {
    try {
      // Generate a unique distribution ID
      const distributionId = crypto.randomUUID();
      
      // Validate inputs
      if (!commitmentId) {
        return {
          success: false,
          errors: [{
            field: 'commitmentId',
            message: 'Commitment ID is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      if (strategy === RiskStrategy.CUSTOM && (!customWeights || Object.keys(customWeights).length === 0)) {
        return {
          success: false,
          errors: [{
            field: 'customWeights',
            message: 'Custom weights are required for CUSTOM strategy',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      // In a real implementation, we would:
      // 1. Retrieve the group commitment to get participants
      // 2. Calculate weights based on the selected strategy:
      //    - EQUAL: assign equal weight to all participants
      //    - PROPORTIONAL: assign weight proportional to contribution
      //    - CUSTOM: use provided weights
      
      // For demonstration purposes, we'll create a mock distribution
      const riskWeights: Record<string, number> = {};
      
      // In a real implementation, this would be populated based on the strategy
      // For now, we'll just use the custom weights if provided
      
      const distribution: IRiskDistribution = {
        distributionId,
        parentCommitmentId: commitmentId,
        riskWeights: customWeights || riskWeights,
        strategy,
        distributionRules: new Uint8Array() // This would contain serialized rules
      };
      
      return {
        success: true,
        data: distribution
      };
    } catch (error) {
      return {
        success: false,
        errors: [{
          field: 'general',
          message: `Failed to create risk distribution: ${error instanceof Error ? error.message : String(error)}`,
          code: ValidationErrorCode.INVALID_STATE
        }]
      };
    }
  }

  /**
   * Creates a collective fulfillment verification for a commitment
   * 
   * @param commitmentId ID of the commitment to verify
   * @param verifiers IDs of users who can verify fulfillment
   * @param threshold Number of verifiers required for approval (M-of-N)
   * @returns Collective fulfillment data
   */
  public async createCollectiveFulfillment(
    commitmentId: string,
    verifiers: string[],
    threshold: number
  ): Promise<IResult<ICollectiveFulfillment>> {
    try {
      // Generate a unique fulfillment ID
      const fulfillmentId = crypto.randomUUID();
      
      // Validate inputs
      if (!commitmentId) {
        return {
          success: false,
          errors: [{
            field: 'commitmentId',
            message: 'Commitment ID is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      if (!verifiers || verifiers.length === 0) {
        return {
          success: false,
          errors: [{
            field: 'verifiers',
            message: 'At least one verifier is required',
            code: ValidationErrorCode.MISSING_REQUIRED
          }]
        };
      }
      
      if (threshold <= 0 || threshold > verifiers.length) {
        return {
          success: false,
          errors: [{
            field: 'threshold',
            message: `Threshold must be between 1 and ${verifiers.length}`,
            code: ValidationErrorCode.INVALID_VALUE
          }]
        };
      }
      
      // Create the collective fulfillment
      const now = Date.now();
      const fulfillment: ICollectiveFulfillment = {
        fulfillmentId,
        parentCommitmentId: commitmentId,
        verifierIds: verifiers,
        verificationThreshold: threshold,
        votes: [],
        status: FulfillmentStatus.PENDING,
        lastUpdateMs: now
      };
      
      // In a real implementation, we would store the fulfillment in a database
      
      return {
        success: true,
        data: fulfillment
      };
    } catch (error) {
      return {
        success: false,
        errors: [{
          field: 'general',
          message: `Failed to create collective fulfillment: ${error instanceof Error ? error.message : String(error)}`,
          code: ValidationErrorCode.INVALID_STATE
        }]
      };
    }
  }

  /**
   * Records a verification vote from a verifier
   * 
   * @param fulfillmentId ID of the collective fulfillment
   * @param verifierId ID of the verifier
   * @param approved Whether the verifier approves the fulfillment
   * @param comment Optional comment explaining the vote
   * @returns Updated collective fulfillment data
   */
  public async recordVerificationVote(
    fulfillmentId: string,
    verifierId: string,
    approved: boolean,
    comment: string = ''
  ): Promise<IResult<ICollectiveFulfillment>> {
    try {
      // In a real implementation, we would:
      // 1. Retrieve the fulfillment data from storage
      // 2. Verify that the verifier is authorized
      // 3. Add or update the vote
      // 4. Check if threshold is met to update status
      // 5. Update the last updated timestamp
      
      // For demonstration purposes, we'll create a mock vote and fulfillment
      const now = Date.now();
      
      const vote: IVerificationVote = {
        verifierId,
        approved,
        comment,
        voteTimestampMs: now,
        signature: new Uint8Array() // This would be populated with a real signature
      };
      
      // Mock fulfillment
      const fulfillment: ICollectiveFulfillment = {
        fulfillmentId,
        parentCommitmentId: 'mock-commitment-id',
        verifierIds: [verifierId],
        verificationThreshold: 1,
        votes: [vote],
        status: approved ? FulfillmentStatus.VERIFIED : FulfillmentStatus.REJECTED,
        lastUpdateMs: now
      };
      
      return {
        success: true,
        data: fulfillment
      };
    } catch (error) {
      return {
        success: false,
        errors: [{
          field: 'general',
          message: `Failed to record verification vote: ${error instanceof Error ? error.message : String(error)}`,
          code: ValidationErrorCode.INVALID_STATE
        }]
      };
    }
  }
} 